# rust-cli-openai

./: Cargo.toml  README.md
src/: main.rs
