[package]
name = "openai-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.27", features = ["full"]}
hyper-tls = "0.5.0" 
serde = "1.0.185"
serde_json = "1.0.80"
serde_derive = "1.0.185"
spinners = "4.1.0"
tokio = {version = "1.32.0", features = ["full"]}

